force-app/main/default/objects/Contract/fields/Early_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Early_Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Early Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Early Renewal Opportunity)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>