force-app/main/default/objects/Contract/fields/Early_Termination_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Timestamp__c</fullName>
    <description>The date when an early termination was performed. Populated by automation.</description>
    <inlineHelpText>The date when an early termination was performed. Populated by automation.</inlineHelpText>
    <label>Early Termination Timestamp</label>
    <type>DateTime</type>
</CustomField>