force-app/main/default/objects/Contract/fields/Generate_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Generate_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Renewal</label>
    <type>Checkbox</type>
</CustomField>