force-app/main/default/objects/Contract/fields/Last_Automation_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Automation_Run__c</fullName>
    <label>Last Automation Run</label>
    <length>255</length>
    <type>Text</type>
</CustomField>