force-app/main/default/objects/Contract/fields/Legal_Language__c.field-meta.xml
<CustomField>
    <fullName>Legal_Language__c</fullName>
    <label>Legal Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>