force-app/main/default/objects/Contract/fields/Non_Renewal_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Notice_Days__c</fullName>
    <label>Non-Renewal Notice Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>