force-app/main/default/objects/Contract/fields/Restructure_Pending__c.field-meta.xml
<CustomField>
    <fullName>Restructure_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restructure Pending</label>
    <type>Checkbox</type>
</CustomField>