force-app/main/default/objects/Contract/fields/Restructured_Date__c.field-meta.xml
<CustomField>
    <fullName>Restructured_Date__c</fullName>
    <label>Restructured Date</label>
    <type>Date</type>
</CustomField>