force-app/main/default/objects/Contract/fields/Term_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Effective_Date__c</fullName>
    <label>Term Effective Date</label>
    <type>Date</type>
</CustomField>