force-app/main/default/objects/Contract/fields/X18_Digit_SFDC_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SFDC_Contract_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit SFDC Contract ID</label>
    <type>Text</type>
</CustomField>