force-app/main/default/objects/Contract/fields/Year_2_ARR__c.field-meta.xml
<CustomField>
    <fullName>Year_2_ARR__c</fullName>
    <label>Year 2 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>