force-app/main/default/objects/Contract/fields/Year_2_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Bookings__c</fullName>
    <label>Year 2 Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>