force-app/main/default/objects/Contract/fields/Year_3_ARR__c.field-meta.xml
<CustomField>
    <fullName>Year_3_ARR__c</fullName>
    <label>Year 3 ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>